<resources>
    <string name="app_name">SmartLab</string>
    <string name="font_skip">Пропустить</string>

    <!--Titles-->
    <string name="text_analyz">Анализы</string>
    <string name="text_nf">Уведомления</string>
    <string name="text_monitor">Мониторинг</string>

    <!--Descriptions-->
    <string name="descr_analyz">Экспресс сбор и получение проб</string>
    <string name="descr_nf">Вы быстро узнаете о результатах</string>
    <string name="descr_monitor">Наши врачи всезда наблюдают\nза вашими показателями здоровья</string>

    <string name="welcome">Добро пожаловать!</string>
    <string name="descr_wel">Войдите, чтобы пользоваться функциями приложения</string>
    <string name="enter">Вход по e-mail</string>
    <string name="ex_em">example@mail.ru</string>
    <string name="next">Далее</string>
    <string name="enter_also">Или войдите с помощью</string>
    <string name="yandex">Войти с Яндекс</string>

    // registration
    <string name="reg_Create">Создание карты \n пациента</string>
    <string name="reg_Skip">Пропустить</string>
    <string name="reg_InfoCard1">Без карты пациента вы не сможете заказать анализы.</string>
    <string name="reg_InfoCard2">В картах будут храниться результаты анализов вас и ваших близких.</string>
    <string name="reg_name">Имя</string>
    <string name="reg_surname">Отчество</string>
    <string name="reg_patronymic">Фамилия</string>
    <string name="reg_birthday">Дата рождения</string>
    <string name="reg_morf">Пол</string>
    <string name="reg_btnCreate">Создать</string>

    // registration 2/0
    <string name="reg2_codefrom">Введите код из E-mail</string>
    <string name="reg2_codeagain">Отправить код повторно можно будет через 0 секунд</string>
    <string name="title_activity_bottom_navigation">bottom_navigation</string>


    <string name="title_analyz">Анализы</string>
    <string name="title_result">Результаты</string>
    <string name="title_support">Поддержка</string>
    <string name="title_profile">Профиль</string>

    <string-array name="gender">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>

</resources>