<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView1"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_Create"
            style="@style/font_for_reg"
            android:layout_margin="10dp"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/btnSkipReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reg_Skip"
            android:layout_margin="10dp"
            style="@style/font_for_skip_inreg"
            />
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_InfoCard1"
        android:layout_marginLeft="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_InfoCard2"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/editNameRegDop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_name"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/editSurnameRegDop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_surname"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <EditText
        android:id="@+id/editPatronymicRegDop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_patronymic"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_birthday"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/textGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_morf"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnCreateMedCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_btnCreate"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_button"
        android:textColorHint="@color/white"
        />
</LinearLayout>