<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_analyz">

    <fragment
        android:id="@+id/navigation_analyz"
        android:name="com.example.smartlab.ui.home.AnalyzFragment"
        android:label="@string/title_analyz"
        tools:layout="@layout/fragment_analyz" />

    <fragment
        android:id="@+id/navigation_result"
        android:name="com.example.smartlab.ui.result.ResultFragment"
        android:label="@string/title_result"
        tools:layout="@layout/fragment_result" />

    <fragment
        android:id="@+id/navigation_support"
        android:name="com.example.smartlab.ui.notifications.SupportFragment"
        android:label="@string/title_support"
        tools:layout="@layout/fragment_support" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.smartlab.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>