<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <TextView
        android:id="@+id/text_profile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Карта пациента"
        android:gravity="center"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/editprofile"
        android:layout_margin="15dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_InfoCard1"
        android:layout_margin="10dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_InfoCard2"
        android:layout_margin="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_name"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_surname"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_patronymic"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_birthday"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/reg_morf"
        android:background="@drawable/reg_style_fot_edit"
        android:layout_margin="10dp"
        android:padding="10dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Сохранить"
        android:textColorHint="@color/white"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/style_button"
        />
    </LinearLayout>

</FrameLayout>