<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
            android:id="@+id/regLL1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
    >

        <ImageView
            android:id="@+id/regImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/hello" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/welcome"
            android:layout_toRightOf="@id/regImg"
            android:layout_centerInParent="true"
            />
</RelativeLayout>

    <TextView
        android:id="@+id/regText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/descr_wel"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/regLL1"
        app:layout_constraintRight_toRightOf="parent"
        />
    <LinearLayout
        android:id="@+id/regLL2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/regText"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="50dp"
            />
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/styleedit"
            android:layout_margin="10dp"
            android:hint="@string/ex_em"
            android:padding="10dp"
            style="@style/placeholder"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regBut1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/style_button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="30dp"
            android:text="@string/next"
            style="@style/butttonNext"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/regLL3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_also"
            android:layout_margin="10dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/regBut2"
            android:text="@string/yandex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/style_button2"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>